# multorum

./: AGENTS.md  Cargo.toml  DESIGN-CN.md  DESIGN.md  PROBLEM.md  README-CN.md  README.md
.agents/skills/multorum-orchestrator/: SKILL.md
.agents/skills/multorum-worker/: SKILL.md
.multorum/: .gitignore  rulebook.toml
.multorum/audit/: design-analyst-1.toml
docs/: CHALLENGE.md  PROBLEM.md  SOLUTION.md  TOUR.md
openspec/: config.yaml
skills/multorum-orchestrator/: SKILL.md
skills/multorum-worker/: SKILL.md
src/: cli.rs  lib.rs  main.rs  methodology.rs  methodology_orchestrator.md  methodology_worker.md  rulebook.default.toml
src/bundle/: error.rs  mod.rs  payload.rs  writer.rs
src/fileset/: compile.rs  error.rs  expr.rs  mod.rs  name.rs  parse.rs  validate.rs
src/mcp/: dto.rs  error.rs  mod.rs  mode.rs  server.rs
src/perspective/: compile.rs  decl.rs  error.rs  mod.rs  name.rs  safety.rs  validation.rs
src/rulebook/: check.rs  compile.rs  decl.rs  error.rs  mod.rs
src/runtime/: bundle.rs  commit.rs  error.rs  forward.rs  mailbox.rs  mod.rs  orchestrator.rs  paths.rs  project.rs  projection.rs  state.rs  storage.rs  timestamp.rs  worker.rs  worker_id.rs
src/schema/: mod.rs
src/vcs/: commit.rs  error.rs  git.rs  mod.rs
tests/: fileset_integration.rs  interface_integration.rs  mcp_transport_integration.rs  perspective_integration.rs  rulebook_integration.rs  runtime_integration.rs
tests/mcp/: cli_subprocess.rs  concurrent_dispatch.rs  main.rs  malformed_args.rs  scenarios.rs  schema_snapshot.rs  transport.rs  wire_roundtrip.rs
(+54 files in other folders)
