[package]
name = "multorum"
version = "0.0.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rmcp = { version = "1.2.0", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "macros", "io-std", "io-util"] }
toml = "1.0"
tracing = "0.1"
wax = "0.7"

[dev-dependencies]
tempfile = "3"
